Adding Some Style

--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,12 @@
 
    <link href="https://fonts.googleapis.com/css2?family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+<link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
     <!--thebody element contains all content shown to a visitor-->
+
     <header>
         <!-- the header shows logo and page title -->
         <img src="img/logo-96X96.svg"
@@ -21,7 +24,7 @@
     <main>
         <!-- the main envelops important page content -->
 
-            <section id=" hero">
+            <section id="hero">
                     <!-- hero section: shows profile image, name & location -->
                      <img src="img/avatar png.png"
                      alt="Avatar picture of me">
@@ -29,6 +32,7 @@
                         <p> Michael Rivas</p>
                         <p> Branchburg, NJ</p>
                      </div>
+                     <!-- close hero section -->
 
             </section>
 
@@ -40,7 +44,7 @@
 
                     <p> I want to be...</p>
 
-                    <p> not stuck in the house due to Covid.</p>
+                    <p> a great example for my daugher since my wife is due this friday March 28th. I am freaking out but I know it will be the most amazing feeling in the world</p>
 
                 </div>
 
@@ -50,7 +54,7 @@
 
     <footer>
 
-    ©2025 - Michael Rivas
+         ©2025 - Michael Rivas
 
     </footer>
 
