avatar picture of me

--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
 
             <section id="hero">
                     <!-- hero section: shows profile image, name & location -->
-                     <img src="img/avatar png.png"
+                     <img src="img/avatar.png"
                      alt="Avatar picture of me">
                      <div>
                         <p> Michael Rivas</p>
