Adding hobbies list

--- a/Index.html
+++ b/Index.html
@@ -40,6 +40,8 @@
 
                 <!-- bio section!: personal info (not too personal)-->
 
+                <h2> Biography:</h2>
+
                 <div>
 
                     <p> I want to be...</p>
@@ -47,6 +49,20 @@
                     <p> a great example for my daugher since my wife is due this friday March 28th. I am freaking out but I know it will be the most amazing feeling in the world</p>
 
                 </div>
+
+            </section>
+
+            <section id="hobbies" >
+                <h2>Hobbies:</h2>
+
+                <ul>
+                    <li> Family time</li>
+                    <li>Run with my dog</li>
+                    <li> Soccer (Premier League)</li>
+                    <li> Gym</li>
+                    <li>Travel</li>
+                    <li> Read the Bible</li>
+                </ul>
 
             </section>
 
