Adding photo gallery

--- a/Index.html
+++ b/Index.html
@@ -66,6 +66,41 @@
 
             </section>
 
+            <section id="gallery">
+
+                <h2>Photo Gallery</h2>
+
+                <hr>
+
+                <figure>
+                    <img src="img/soccer-640w.jpg"
+                    alt="Tigres Stadium in Mexico">
+                    <figcaption> Tigres is a soccer team in Monterrey Mexico</figcaption>
+
+                </figure>
+
+                <hr>
+
+                <figure>
+                    <img src="img/gym- 640w.jpg"
+                    alt="Love working out">
+                    <figcaption> I like working out at least 5 times a week</figcaption>
+
+                </figure>
+
+
+                <hr>
+
+                <figure>
+                    <img src="img/travel-640w.jpg"
+                    alt="Traveling">
+                    <figcaption> I love visiting new places and learning about new cultures</figcaption>
+
+                </figure>
+
+
+            </section>
+
     </main>
 
     <footer>
