--- a/Index.html
+++ b/Index.html
@@ -103,9 +103,66 @@
 
             <article id="lit">
 
-                <h2>Working Title </h2>
+                <h2>The Project Gutenberg eBook of Jack Pumpkinhead of Oz </h2>
 
-                </div>
+            <div>
+<p>The rain beat heavily on the roof,
+    swirled down the side walks and made
+    tumbling torrents of the gutters. 
+    Turning from the window in disgust,
+    Peter dropped his baseball mitt on 
+    the library sofa and started glumly 
+    toward the stair. No practice to-day,
+    doggone it! Why couldn't it rain on 
+    Mondays and be clear on Saturdays 
+    for a change? How was he to have the
+    team in trim for the big match if this
+    sort of thing kept up? </p>
+
+    <p>Kicking crossly at each step, 
+       Peter progressed toward the attic.
+    Not to waste the day, he resolved to
+    have a look at his fishing tackle. 
+    The thought of the fishing trip he
+    was soon to take with his grandfather 
+    cheered him considerably and by the time 
+    he had switched on the attic light and 
+    dragged out the old chest where he kept 
+    his treasures, he was whistling softly 
+    to himself. On top of the chest lay two
+    coarse sacks. They were neatly folded in 
+    half and as Peter lifted them off he gave
+    an amused little chuckle.</p>
+
+    <p>I wonder what's happened in Oz lately,
+    mused Peter, sitting down in front of the
+     chest with the sacks on his lap. 
+     I wonder whether Ozma knows what I did with
+        the pirate's gold pieces and whether the 
+        Gnome King has got into any more mischief.
+        And thinking of that enchanting and 
+        enchanted Kingdom, Peter forgot all 
+        about his fishing tackle.</p>
+
+    <p>Now many of you may have read or heard 
+        of the marvelous Land of Oz, but Peter 
+    had really been there; had met the Scarecrow
+    and the wonderful Wizard; had kept the Gnome
+    King from conquering the Emerald City and even
+    discovered a pirate ship full of treasure. 
+    The pirate who owned the ship had once been 
+    a real pirate, so when Ozma, the little girl 
+    ruler of Oz, transported Peter and the treasure
+    back to Philadelphia, two of the bags of gold
+    had been real gold and these bags had come with him.
+    These very sacks that Peter held across his knees
+    had once bulged with gold pieces. And those 
+    of Peter's friends and relations who had sniffed
+    at the story of his amazing journey to Oz never 
+    had been able to explain them away.</p>
+
+
+            </div>
                 
             </article>
 
