--- a/Index.html
+++ b/Index.html
@@ -164,7 +164,33 @@
 
             </div>
                 
-            </article>
+
+
+            <section id="video">
+
+                <h2>A Short Video:</h2>
+
+            <div id="myVideo">
+                <iframe id="myVideo" width="560" height="315" src=
+                "https://www.youtube.com/embed/9hau4LD3dLk" title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                aloowfullscreen></iframe>
+            </div>
+        </section>
+
+        <style>
+
+            #myVideo {
+                width: 300px;
+                display:block;
+                margin:auto;
+            }
+
+        </style>
+
+
 
     </main>
 
