add netlify form

--- a/Index.html
+++ b/Index.html
@@ -200,7 +200,7 @@
 
             <h2>Contact Us:</h2>
 
-            <form id="contactForm" name="contactForm" method="post"data-netlify="true"></form>
+            <form id="contactForm" name="contactForm" method="POST"data-netlify="true">
 
 
                 <fieldset>
@@ -254,6 +254,7 @@
                          <!-- Submit -->
                           <button type="submit">Send</button>
 
+                         
 
                     </div>
 
