--- a/Index.html
+++ b/Index.html
@@ -200,7 +200,8 @@
 
             <h2>Contact Us:</h2>
 
-            <form id="contactForm" name="contactForm" method="POST"data-netlify="true">
+            <form id="contactForm" name="contactForm" method="post"
+            data-netlify="true">
 
 
                 <fieldset>
