--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
     <title>About Me</title>
 
    <link href="https://fonts.googleapis.com/css2?family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -39,7 +40,7 @@
 
             <section id="hero">
                     <!-- hero section: shows profile image, name & location -->
-                     <img src="img/avatar.png"
+                     <img src="img/lobster-mr (1).svg"
                      alt="Avatar picture of me">
                      <div>
                         <p> Michael Rivas</p>
@@ -68,8 +69,10 @@
             <section id="hobbies" >
                 <h2>Hobbies:</h2>
 
+            <p> sdjnvjsdfnbv kjnsz</p>
+
                 <ul>
-                    <li> Family time</li>
+                    <li>Family time</li>
                     <li>Run with my dog</li>
                     <li> Soccer (Premier League)</li>
                     <li> Gym</li>
