--- a/Index.html
+++ b/Index.html
@@ -49,24 +49,19 @@
                      <!-- close hero section -->
 
             </section>
-
-            <section id="bio">
+<section class="row">
+            <div class="column">
 
                 <!-- bio section!: personal info (not too personal)-->
 
                 <h2> Biography:</h2>
 
-                <div>
-
                     <p> I want to be...</p>
 
                     <p> a great example for my daugher since my wife is due this friday March 28th. I am freaking out but I know it will be the most amazing feeling in the world</p>
+            </div>
 
-                </div>
-
-            </section>
-
-            <section id="hobbies" >
+            <div class="column" >
                 <h2>Hobbies:</h2>
 
             <p> sdjnvjsdfnbv kjnsz</p>
@@ -80,7 +75,8 @@
                     <li> Read the Bible</li>
                 </ul>
 
-            </section>
+            </div>
+ </section>
 
             <section id="gallery">
 
