--- a/Index.html
+++ b/Index.html
@@ -56,24 +56,44 @@
 
                 <h2> Biography:</h2>
 
-                    <p> I want to be...</p>
+                    <p> Hello there</p>
 
-                    <p> a great example for my daugher since my wife is due this friday March 28th. I am freaking out but I know it will be the most amazing feeling in the world</p>
+                    <p> My name is Michael Rivas. I am from Costa Rica. 
+                        I consider myself a hard worker and good person. 
+                        I move here to the states when I was 18 years old.
+                        I was able to meet great people here and learrned english. 
+                        I meet whos my wife 10 years ago and from then we have
+                        created a family </p>
+
+                    <p> I recently just became a father. I want to be a great 
+                        example for my daugher since she was born last month 
+                        on thr 6th. Its been the greatest experience ever. 
+                        I never thought I was going to love this much.
+                        We are still learning since she does not understand
+                        when is day time or night time. But every little moment
+                        is worth it. </p>
             </div>
 
             <div class="column" >
                 <h2>Hobbies:</h2>
 
-            <p> sdjnvjsdfnbv kjnsz</p>
+            <p> I would like to show in the gallery some of my hobbies that I have
+                mentioned before. To me my best time is when I spend it with my family.
+                Me and my wife love go on walks with our dog. Also, on of my biggest 
+                passions is playing soccer. I was pretty close to make it pro in my country
+                and since then, I have been playing just for fun. I love going to the gym 
+                at least 3 to 5 times a week which helps me with the stress. To me the best 
+                time to work out is at 5am. </p>
 
-                <ul>
-                    <li>Family time</li>
-                    <li>Run with my dog</li>
-                    <li> Soccer (Premier League)</li>
-                    <li> Gym</li>
-                    <li>Travel</li>
-                    <li> Read the Bible</li>
-                </ul>
+            <p> I have created a good relationship with good as well and is through the bible
+                that I have found peace. I think every religion is important in this world; 
+                however, the relationship created with God is essential in my life. I enjoy 
+                going to church with my family. </p>
+
+            <p>Lastly, one of my dreams is to visit as many countries I can. I have been blessed 
+                to learn about some different cultures. Me and my wife were planning on going to 
+                Europe during this summer, but with baby now in our lives we have to postpone this 
+                trip to hipefully next year </p>
 
             </div>
  </section>
@@ -115,63 +135,16 @@
 
             <article id="lit">
 
-                <h2>The Project Gutenberg eBook of Jack Pumpkinhead of Oz </h2>
+                <h2>Netlify Large Media Format</h2>
 
             <div>
-<p>The rain beat heavily on the roof,
-    swirled down the side walks and made
-    tumbling torrents of the gutters. 
-    Turning from the window in disgust,
-    Peter dropped his baseball mitt on 
-    the library sofa and started glumly 
-    toward the stair. No practice to-day,
-    doggone it! Why couldn't it rain on 
-    Mondays and be clear on Saturdays 
-    for a change? How was he to have the
-    team in trim for the big match if this
-    sort of thing kept up? </p>
+    <p> </p>
 
-    <p>Kicking crossly at each step, 
-       Peter progressed toward the attic.
-    Not to waste the day, he resolved to
-    have a look at his fishing tackle. 
-    The thought of the fishing trip he
-    was soon to take with his grandfather 
-    cheered him considerably and by the time 
-    he had switched on the attic light and 
-    dragged out the old chest where he kept 
-    his treasures, he was whistling softly 
-    to himself. On top of the chest lay two
-    coarse sacks. They were neatly folded in 
-    half and as Peter lifted them off he gave
-    an amused little chuckle.</p>
+    <p>  </p>
 
-    <p>I wonder what's happened in Oz lately,
-    mused Peter, sitting down in front of the
-     chest with the sacks on his lap. 
-     I wonder whether Ozma knows what I did with
-        the pirate's gold pieces and whether the 
-        Gnome King has got into any more mischief.
-        And thinking of that enchanting and 
-        enchanted Kingdom, Peter forgot all 
-        about his fishing tackle.</p>
+    <p> </p>
 
-    <p>Now many of you may have read or heard 
-        of the marvelous Land of Oz, but Peter 
-    had really been there; had met the Scarecrow
-    and the wonderful Wizard; had kept the Gnome
-    King from conquering the Emerald City and even
-    discovered a pirate ship full of treasure. 
-    The pirate who owned the ship had once been 
-    a real pirate, so when Ozma, the little girl 
-    ruler of Oz, transported Peter and the treasure
-    back to Philadelphia, two of the bags of gold
-    had been real gold and these bags had come with him.
-    These very sacks that Peter held across his knees
-    had once bulged with gold pieces. And those 
-    of Peter's friends and relations who had sniffed
-    at the story of his amazing journey to Oz never 
-    had been able to explain them away.</p>
+    <p> </p>
 
 
             </div>
